--- a/index.html
+++ b/index.html
@@ -25,90 +25,27 @@
             <img alt="Betale med mobil" class="illustration" src="img/betale-med-mobil.jpg" />
           </div>
 
-          <h2>1. Ulike typer mobile betalingsløsninger </h2>
-          <p>Once we hit about 30 people, I noticed it became much harder for me to stay current on how my team felt about our company, the vision, the direction, the work, the culture, etc.</p>
+          <h2>Ulike typer mobile betalingsløsninger</h2><p>Det finnes en rekke aktører som lar deg betale med mobilen i dag. Her er noen av de mest populære mobile betalingsmåtene i Norge:</p>
+          <p>Tradisjonell SMS-betaling: Sluttbrukerens telefonregning belastes. Denne tjenesten kan være CPA GAS (Goods and Services), hvor totalt typisk 15%+ går bort av omsetningen, og beløpsgrensen er på 500kr, eller CPA/Premium SMS for digitale tjenester (dyrere og med beløpsgrense på 200kr). </p>
+          <p><a href="http://smspay.io">SMSpay</a>: Lar brukeren betale med SMS, uten at operatøren tar noen andel, og uten beløpsgrense. Denne siden vil vise deg hvorfor dette er et godt valg.</p>
+          <p>Betale med kort: Kortbetaling på nett fungerer stadig bedre, men i Norge er det fortsatt litt kronglete med BankID.</p>
+          <p>Paypal: Satser hard på det mobile markedet om dagen, men nysatsningene er ikke i sving i Norge ennå.</p>
+          <h2>Kostnad per transaksjon</h2><p>Alle tjenester har en kostnad per transaksjon, i tillegg til månedlig avgift. </p>
+          <p>Gjør man kortbetalinger, går minimum 2% bort til kortselskapet/innløser, f.eks Elavon eller PBS. I tillegg kommer abonnement hos en tjeneste som f.eks Dibs eller Nets. De tar gjerne en mindre prosent og/eller et par kroner per transaksjon.</p>
+          <p>For SMS-tjenester fra en gateway, betaler man en viss prosentsats til SMS-leverandøren, men det går også en stor post til teleselskapet. Dette er grunnen til at mobile betalinger via SMS ofte er langt dyrere enn kortbaserte alternativ. </p>
+          <p>Med tjenesten SMSpay, benytter man kundens kortdata for å omgå utgiften til teleselskapet. Ved å hoppe over dette operatørleddet, sparer organisasjonen over 60% av utgiftene per transaksjon, og sitter igjen med en langt større andel.</p>
+          <h2>Bedriftsabonnement og betaling med SMS</h2><p>For betaling med kort, er ikke sluttbrukerens telefonabonnement noe problem, selv om man betaler fra mobilen. Bruker man en tradisjonell SMS-tjeneste derimot, må mange brukere avstå fra å bruke telefonen til private kjøp og tjenester. </p>
+          <p>I SMSpay er dette løst ved å omgå operatøren; hva slags abonnement brukeren har er irrelevant, og alle typer telefoner fungerer</p>
+          <h2>Beløpsgrense for SMS-tjenester</h2><p>GAS og Premium har grenser på henholdsvis 500 og 200kr. Bruker man SMSpay, er det ingen øvre grense, og man kan også gjøre autotrekk. </p>
+          <p>For kortbetaling med BankID er det heller ingen beløpsgrense når man gir fra telefonen, men mobile transaksjoner hvor man må taste inn kortnummer hver gang, er ikke gunstig.</p>
+          <h2>App vs SMS</h2><p>Både Apple og Google investerer i disse dager mye ressurser inn i bruk av bluetooth LE og tilhørende apps og operativsystemer for å gjøre betalinger i butikk. Kanskje blir kortet overflødig om få år! Dersom man ikke ønsker å være knyttet til et spesielt operativsystem eller nedlastning av apps, er imidlertid fortsatt SMS-betaling og SMSpay det beste alternativet. </p>
+          <p>SMSpay er dessuten det eneste mobile betalingsløsningen i Norge som lar deg gjøre kjøp med kortbelastning uten å være på nettet. Etter første transaksjon, trenger ikke sluttbrukeren annet enn en mobil med støtte for god gammeldags SMS.</p>
+          <h2>Sikkerhet når man skal betale med mobil</h2><p>Sikkerhet og enkelthet, er norske forbrukeres viktigste kriterier når de skal gjøre betalinger. I Norge har vi et godt lovverk, som gjør at sikkerheten er godt ivaretatt uansett hvilke av løsningene over man velger.</p>
+          <p>En utfordring gjenstår likevel: Dersom man mister kortet må det sperres, og mister man man telefonen uten å ha kode, må den også sperres. Bruker man sin egen mobil til betaling, kan man imidlertid stole på at kortdata og transaksjoner følger strenge krav.</p>
+          <h2>Konklusjon: </h2><p>SMSpay har en rekke fordeler: Lavere kostnad per transaksjon, fungerer på alle typer telefoner uten nedlastning, fungerer med alle typer abonnementer, kan integreres med andre systemer, gir admin-tilgang, "min side", rapporter og viktigst: Gjør det enkelt for sluttbrukeren å betale eller donere! Bestill i dag, eller se video av hvordan det fungerer:</p>
+          <p>video here</p>
+          <h2>Bestill i dag</h2><p>Ønsker du mer info eller er klar til å bestille? Kontakt oss for å vise deg hvordan SMSpay fungerer!</p>
 
-          <p>I needed these insights in order to make the right decisions about the company. But I didn't have them.</p>
-
-          <p>Many of the business owners I&rsquo;ve been speaking with recently have experienced the exact same growing pains at similar growth points in their own business. You too?</p>
-
-          <h2>2. Kostnad per transaksjon i kroner og %</h2>
-          <p>My name is Jason Fried. I founded my company, 37signals, back in 1999. We&rsquo;re best known for making Basecamp, the world&rsquo;s most popular cloud-based project management tool.</p>
-
-          <p>We started out with four people. Today, 14 years later, we&rsquo;re 38 people strong. Growth is great, but if you care deeply about the people you work with, growth can be a curse, too.</p>
-
-          <h2>3. Bedriftsabonnement og betaling med sms</h2>
-          <p>It&rsquo;s embarrassing to admit you can&rsquo;t do something as well as you once did, but as we grew I just couldn&rsquo;t keep up with everyone the way I used to. And if I was running short on time now, how would I find more time as the company kept growing?</p>
-
-          <p>But I also knew I had no choice. I had to know my people better. <strong>If you don&rsquo;t know your people, you don&rsquo;t know your company.</strong> And if you don&rsquo;t know your company, your days are numbered.</p>
-
-          <p>So I had to do something about it immediately. The longer I waited, the worse it would get. These cuts don&rsquo;t heal themselves.</p>
-
-          <h2>4. Beløpsgrense for SMS-tjenester</h2>
-          <p>Luckily I&rsquo;m in the software business. I know how to make simple, useful tools that solve real problems. Great software is like a lever &mdash; it helps you get way more done in way less time and with less effort.</p>
-
-          <p>I certainly didn&rsquo;t need another business intelligence dashboard full of stats and graphs. A lack of stats and graphs weren&rsquo;t the problem. I had a communications problem. A feedback loop problem.</p>
-
-          <h2>5. App vs SMS</h2>
-          <p>So I spent a lot of time thinking about how I could get to know my company better. What did I need to know? How often? What kind of things? From who? Could other people in the company find this information useful, too? And so on.</p>
-
-          <p>From a huge pile of possibilities, <strong>four core outcomes</strong> leaped out at me:</p>
-
-          <ol>
-            <li><strong>Every week I wanted to learn something new</strong> about how my employees felt about our business, our work, and our culture.</li>
-            <li><strong>Every week I wanted everyone to know what everyone else was working on.</strong> It&rsquo;s not enough for me to be informed - everyone&rsquo;s in this together.</li>
-            <li><strong>Every week I wanted everyone to share something non-work related with each other.</strong> A book they read recently, a new recipe they&rsquo;ve tried, something, anything that would help form surprise bonds between people.</li>
-            <li><strong>I wanted all this information catalogued and plotted over time.</strong> This way I could spot trends and shifts in morale, hone in on longer-term insights, spot outliers that need special attention, etc.</li>
-           </ol>
-
-          <p>I also came up with this list of <strong>key requirements</strong>:</p>
-
-          <ol>
-            <li>As CEO, <strong>maintaining a healthy culture isn&rsquo;t someone else&rsquo;s job &mdash; it&rsquo;s my job</strong>. I had to take responsibility for knowing my people and knowing my company. That buck starts and stops with me.</li>
-            <li><strong>Answers only come when you ask questions</strong>, so the tool had to be built around questions. People generally don&rsquo;t volunteer information re: morale, mood, motivation unless they&rsquo;re directly asked about it.</li>
-            <li><strong>The entire system had to be optional.</strong> No one at the company should be forced to use it. Forcing people to give you feedback is ineffective and builds resentment.</li>
-            <li><strong>This couldn't be a burden on my employees.</strong> Employees would never have to sign up for something or log into anything.</li>
-            <li><strong>Information had to come in frequently and regularly.</strong> Huge information dumps once or twice a year are paralyzing and lead to inaction.</li>
-            <li><strong>I had to follow-through.</strong> If someone (or a group of people) suggested an important change, and it made sense, I had to do everything I could to make it happen. I wasn't creating this system to gather information and do nothing about it.</li>
-            <li><strong>It had to be automated, super easy (for me and my employees), non-irritating, and regular like clockwork.</strong> This had to eventually become habit for everyone involved. If it ever felt like something that was in the way or annoying, it wouldn&rsquo;t work. It had to be something people looked forward to every week.</li>
-            <li><strong>Feedback had to be attached to real people - it couldn&rsquo;t be anonymous.</strong> You need to know your people individually, not ambiguously. If someone has a problem, you need to know who it is so you can <em>talk to them</em> about it. This requires trust on everyone&rsquo;s part.</li>
-            <li><strong>Success depended on a combination of automated, and face-to-face, back-and-forth</strong> with my team. The unique combination of automated and face-to-face communication play off each other in really positive ways.</li>
-          </ol>
-
-          <h2>6. Sikkerhet når man skal betale med mobil</h2>
-          <p>So I pulled together a small team, and we started building the tool we needed to make all this happen. We prototyped, and prototyped, and prototyped until we absolutely nailed it.</p>
-
-          <p>We&rsquo;ve been using this tool &mdash; which we now call &ldquo;<strong>Know Your Company</strong>&rdquo; &mdash; since early 2013 and it&rsquo;s been enlightening. I&rsquo;m so much more aware now, and employees are certain they are being heard.</p>
-
-
-          <h2>7. Integrasjoner</h2>
-          <p>Knowing my company better has already led to improvements in customer service, employee benefits, hiring procedures, development priorities, company culture, and performance feedback. And that&rsquo;s just the start.</p>
-
-          <p>And now, after months of development, design, tweaking, and fine-tuning, we&rsquo;d like to help you get to know your company, too. We&rsquo;ve decided to turn <strong>Know Your Company</strong> into a product any business owner can use.</p>
-
-          <h2>8. Registrering</h2>
-
-          <p>There are a few requirements to use <strong>Know Your Company.</strong></p>
-
-          <ul>
-            <li>You own a company with between 25 and 75 employees. It&rsquo;s OK if you grow beyond that, but it&rsquo;s best to start with Know Your Company somewhere between 25 and 75 employees.</li>
-            <li>You&rsquo;re struggling with cultural growing pains like I was.</li>
-            <li>You know there are things about your own business that you don't know (but should know).</li>
-            <li>You acknowledge that answers come from questions, so the right questions are key.</li>
-            <li>You&rsquo;re committing to listening to your team and taking action if something in need of change reveals itself.</li>
-            <li>You&rsquo;re willing to invest just $100 per employee. This is a one-time investment, not an ongoing expense. For example, if you have 27 employees, you'd invest $2700 in the product, one time. No monthly or annual fees.</li>
-          </ul>
-
-          <p>If this sounds like you, and you want to get to know your company better, just drop me an email at <a href="mailto:post@front.no">post@front.no</a> and I'll give you a personal tour of the product. If you&rsquo;re in Chicago, we can do it in person. If you&rsquo;re not, we can do it via Skype, iChat, WebEx, GoTo Meeting, or whatever works for you.</p>
-
-          <h2>Bestill <em>i dag</em></h2>
-          <p>If you like what you see, we can get you set up the next day. Week after week after week, the insights will keep coming. Months from now you&rsquo;ll know so much more about your company than you ever did before.</p>
-
-          <p>And if it doesn&rsquo;t work for you, you can have all your money back &mdash; you have my personal guarantee. I don&rsquo;t want to keep a penny if you aren&rsquo;t getting to know your company better.</p>
-
-          <p>So let&rsquo;s get started. Drop me an email at <a href="mailto:post@front.no">post@front.no</a>. Tell me your story, your struggles, your managerial growing pains. And I&rsquo;ll show you how <strong>Know Your Company</strong> can help.</p>
-
-          <p>I&rsquo;m really looking forward to working with you to help you get to know your company again.</p>
 
           <p>This is going to be fun,</p>
 
