--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
           <h1>Betale med mobil: Dette må du vite</h1>
 
 
-          <p><strong>Alt du trenger å vite om mobil betaling, sms betaling og andre mobile betalingsløsninger <em>før du velger SMS -og kortleverandør i 2014.</em></strong></p>
+          <p><strong>Alt du og din bedrift trenger å vite om mobil betaling, sms betaling og andre mobile betalingsløsninger <em>før du velger SMS -og kortleverandør i 2014.</em></strong></p>
 
           <div class="center">
             <img alt="Betale med mobil" class="illustration" src="img/betale-med-mobil.jpg" />
