--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <title>Betale med mobil</title>
+        <title>Betale med mobil - mobil betaling - SMS betaling</title>
         <meta name="description" content="Alt du trenger å vite om mobil betaling, sms betaling og andre mobile betalingsløsninger. Håper siden er nyttig for deg!">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="css/normalize.css">
@@ -47,12 +47,9 @@
           <h2>Bestill i dag</h2><p>Ønsker du mer info eller er klar til å bestille? Kontakt oss for å vise deg hvordan SMSpay fungerer!</p>
 
 
-          <p>This is going to be fun,</p>
-
           <p><img alt="Jf signature" src="https://knowyourcompany.com/assets/jf_signature-1315cc98fb38106de99a011910e2d7ca.png" width="200" /></p>
 
           <p>-Frontkom<br />grunnleggere av SMSpay</p>
-          <p>VIDEO HERE</p>
         </div>
       </section>
 
@@ -64,7 +61,7 @@
           e=o.createElement(i);r=o.getElementsByTagName(i)[0];
           e.src='//www.google-analytics.com/analytics.js';
           r.parentNode.insertBefore(e,r)}(window,document,'script','ga'));
-          ga('create','UA-XXXXX-X');ga('send','pageview');
+          ga('create','UA-222206-16');ga('send','pageview');
       </script>
     </body>
 </html>
