Better last paragraphs

--- a/index.html
+++ b/index.html
@@ -42,14 +42,24 @@
           <p>SMSpay er dessuten det eneste mobile betalingsløsningen i Norge som lar deg gjøre kjøp med kortbelastning uten å være på nettet. Etter første transaksjon, trenger ikke sluttbrukeren annet enn en mobil med støtte for god gammeldags SMS.</p>
           <h2>Sikkerhet når man skal betale med mobil</h2><p>Sikkerhet og enkelthet, er norske forbrukeres viktigste kriterier når de skal gjøre betalinger. I Norge har vi et godt lovverk, som gjør at sikkerheten er godt ivaretatt uansett hvilke av løsningene over man velger.</p>
           <p>En utfordring gjenstår likevel: Dersom man mister kortet må det sperres, og mister man man telefonen uten å ha kode, må den også sperres. Bruker man sin egen mobil til betaling, kan man imidlertid stole på at kortdata og transaksjoner følger strenge krav.</p>
-          <h2>Konklusjon: </h2><p>SMSpay har en rekke fordeler: Lavere kostnad per transaksjon, fungerer på alle typer telefoner uten nedlastning, fungerer med alle typer abonnementer, kan integreres med andre systemer, gir admin-tilgang, "min side", rapporter og viktigst: Gjør det enkelt for sluttbrukeren å betale eller donere! Bestill i dag, eller se video av hvordan det fungerer:</p>
-          <p>video here</p>
-          <h2>Bestill i dag</h2><p>Ønsker du mer info eller er klar til å bestille? Kontakt oss for å vise deg hvordan SMSpay fungerer!</p>
+          <h2>Konklusjon: </h2>
+          <p>SMSpay har en rekke fordeler</p>
+          <ul>
+            <li>1/3 av prisen til CPA GAS (tradisjonell SMS-betaling)</li><li>Fungerer på alle typer telefoner uten nedlastning</li>
+            <li>Bedriftsabonnement er null problem</li>
+             <li>Integrerert med andre systemer</li>
+            <li>Admin backend med statistikk</li><li>"Min side" og kvittering for sluttbruker</li><li>Rapporter</li><li>Og viktigst: Gjør det enkelt for sluttbrukeren å betale eller donere!</li>
+          </ul>
+
+          <h2>Bestill i dag</h2>
+          <p>Ønsker du mer info? <a href="http://smspay.io">Se priser og bestill i dag!</a></p>
+          
+          <p><strong>Ja til bedre mobil betaling!</strong></p>
 
 
           <p><img alt="Jf signature" src="https://knowyourcompany.com/assets/jf_signature-1315cc98fb38106de99a011910e2d7ca.png" width="200" /></p>
 
-          <p>-Frontkom<br />grunnleggere av SMSpay</p>
+          <p>-SMSpay<br />et produkt av <a href="http://front.no">Frontkom</a>.</p>
         </div>
       </section>
 
