--- a/index.html
+++ b/index.html
@@ -18,29 +18,29 @@
 
           <h1>Betale med mobil: Dette må du vite</h1>
 
-
           <p><strong>Alt du og din bedrift trenger å vite om mobil betaling, sms betaling og andre mobile betalingsløsninger <em>før du velger SMS -og kortleverandør i 2014.</em></strong></p>
 
           <div class="center">
             <img alt="Betale med mobil" class="illustration" src="img/betale-med-mobil.jpg" />
           </div>
 
-          <h2>Ulike typer mobile betalingsløsninger</h2><p>Det finnes en rekke aktører som lar deg betale med mobilen i dag. Her er noen av de mest populære mobile betalingsmåtene i Norge:</p>
+          <h2>1. Ulike typer mobile betalingsløsninger</h2>
+<p>Det finnes en rekke aktører som lar deg betale med mobilen i dag. Her er noen av de mest populære mobile betalingsmåtene i Norge:</p>
           <p>Tradisjonell SMS-betaling: Sluttbrukerens telefonregning belastes. Denne tjenesten kan være CPA GAS (Goods and Services), hvor totalt typisk 15%+ går bort av omsetningen, og beløpsgrensen er på 500kr, eller CPA/Premium SMS for digitale tjenester (dyrere og med beløpsgrense på 200kr). </p>
           <p><a href="http://smspay.io">SMSpay</a>: Lar brukeren betale med SMS, uten at operatøren tar noen andel, og uten beløpsgrense. Denne siden vil vise deg hvorfor dette er et godt valg.</p>
           <p>Betale med kort: Kortbetaling på nett fungerer stadig bedre, men i Norge er det fortsatt litt kronglete med BankID.</p>
           <p>Paypal: Satser hard på det mobile markedet om dagen, men nysatsningene er ikke i sving i Norge ennå.</p>
-          <h2>Kostnad per transaksjon</h2><p>Alle tjenester har en kostnad per transaksjon, i tillegg til månedlig avgift. </p>
+          <h2>2. Kostnad per transaksjon</h2><p>Alle tjenester har en kostnad per transaksjon, i tillegg til månedlig avgift. </p>
           <p>Gjør man kortbetalinger, går minimum 2% bort til kortselskapet/innløser, f.eks Elavon eller PBS. I tillegg kommer abonnement hos en tjeneste som f.eks Dibs eller Nets. De tar gjerne en mindre prosent og/eller et par kroner per transaksjon.</p>
           <p>For SMS-tjenester fra en gateway, betaler man en viss prosentsats til SMS-leverandøren, men det går også en stor post til teleselskapet. Dette er grunnen til at mobile betalinger via SMS ofte er langt dyrere enn kortbaserte alternativ. </p>
           <p>Med tjenesten SMSpay, benytter man kundens kortdata for å omgå utgiften til teleselskapet. Ved å hoppe over dette operatørleddet, sparer organisasjonen over 60% av utgiftene per transaksjon, og sitter igjen med en langt større andel.</p>
-          <h2>Bedriftsabonnement og betaling med SMS</h2><p>For betaling med kort, er ikke sluttbrukerens telefonabonnement noe problem, selv om man betaler fra mobilen. Bruker man en tradisjonell SMS-tjeneste derimot, må mange brukere avstå fra å bruke telefonen til private kjøp og tjenester. </p>
+          <h2>3. Bedriftsabonnement og betaling med SMS</h2><p>For betaling med kort, er ikke sluttbrukerens telefonabonnement noe problem, selv om man betaler fra mobilen. Bruker man en tradisjonell SMS-tjeneste derimot, må mange brukere avstå fra å bruke telefonen til private kjøp og tjenester. </p>
           <p>I SMSpay er dette løst ved å omgå operatøren; hva slags abonnement brukeren har er irrelevant, og alle typer telefoner fungerer</p>
-          <h2>Beløpsgrense for SMS-tjenester</h2><p>GAS og Premium har grenser på henholdsvis 500 og 200kr. Bruker man SMSpay, er det ingen øvre grense, og man kan også gjøre autotrekk. </p>
+          <h2>4. Beløpsgrense for SMS-tjenester</h2><p>GAS og Premium har grenser på henholdsvis 500 og 200kr. Bruker man SMSpay, er det ingen øvre grense, og man kan også gjøre autotrekk. </p>
           <p>For kortbetaling med BankID er det heller ingen beløpsgrense når man gir fra telefonen, men mobile transaksjoner hvor man må taste inn kortnummer hver gang, er ikke gunstig.</p>
-          <h2>App vs SMS</h2><p>Både Apple og Google investerer i disse dager mye ressurser inn i bruk av bluetooth LE og tilhørende apps og operativsystemer for å gjøre betalinger i butikk. Kanskje blir kortet overflødig om få år! Dersom man ikke ønsker å være knyttet til et spesielt operativsystem eller nedlastning av apps, er imidlertid fortsatt SMS-betaling og SMSpay det beste alternativet. </p>
+          <h2>5. App vs SMS</h2><p>Både Apple og Google investerer i disse dager mye ressurser inn i bruk av bluetooth LE og tilhørende apps og operativsystemer for å gjøre betalinger i butikk. Kanskje blir kortet overflødig om få år! Dersom man ikke ønsker å være knyttet til et spesielt operativsystem eller nedlastning av apps, er imidlertid fortsatt SMS-betaling og SMSpay det beste alternativet. </p>
           <p>SMSpay er dessuten det eneste mobile betalingsløsningen i Norge som lar deg gjøre kjøp med kortbelastning uten å være på nettet. Etter første transaksjon, trenger ikke sluttbrukeren annet enn en mobil med støtte for god gammeldags SMS.</p>
-          <h2>Sikkerhet når man skal betale med mobil</h2><p>Sikkerhet og enkelthet, er norske forbrukeres viktigste kriterier når de skal gjøre betalinger. I Norge har vi et godt lovverk, som gjør at sikkerheten er godt ivaretatt uansett hvilke av løsningene over man velger.</p>
+          <h2>6. Sikkerhet når man skal betale med mobil</h2><p>Sikkerhet og enkelthet, er norske forbrukeres viktigste kriterier når de skal gjøre betalinger. I Norge har vi et godt lovverk, som gjør at sikkerheten er godt ivaretatt uansett hvilke av løsningene over man velger.</p>
           <p>En utfordring gjenstår likevel: Dersom man mister kortet må det sperres, og mister man man telefonen uten å ha kode, må den også sperres. Bruker man sin egen mobil til betaling, kan man imidlertid stole på at kortdata og transaksjoner følger strenge krav.</p>
           <h2>Konklusjon: </h2>
           <p>SMSpay har en rekke fordeler</p>
