--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
           <p><strong>Ja til bedre mobil betaling!</strong></p>
 
 
-          <p><img alt="Jf signature" src="https://knowyourcompany.com/assets/jf_signature-1315cc98fb38106de99a011910e2d7ca.png" width="200" /></p>
+          <p><img alt="Frontkom logo: Vi gjør mobile betalinger" src="http://www.frontkom.no/sites/all/themes/frontd7/logo.png"  /></p>
 
           <p>-SMSpay<br />et produkt av <a href="http://front.no">Frontkom</a>.</p>
         </div>
