--- a/index.html
+++ b/index.html
@@ -50,7 +50,11 @@
              <li>Integrerert med andre systemer</li>
             <li>Admin backend med statistikk</li><li>"Min side" og kvittering for sluttbruker</li><li>Rapporter</li><li>Og viktigst: Gjør det enkelt for sluttbrukeren å betale eller donere!</li>
           </ul>
-
+          
+          <h2>SMSpay mobil betaling: Donasjon (video)</h2>
+          <br>
+          <iframe src="//player.vimeo.com/video/79108480" width="500" height="312" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
+          <br>
           <h2>Bestill i dag</h2>
           <p>Ønsker du mer info? <a href="http://smspay.io">Se priser og bestill i dag!</a></p>
           
