--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <title>Betale med mobil - mobil betaling - SMS betaling</title>
+        <title>Betale med mobil - mobil betaling - SMS betaling med SMSpay</title>
         <meta name="description" content="Alt du trenger å vite om mobil betaling, sms betaling og andre mobile betalingsløsninger. Håper siden er nyttig for deg!">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="css/normalize.css">
@@ -43,7 +43,7 @@
           <h2>6. Sikkerhet når man skal betale med mobil</h2><p>Sikkerhet og enkelthet, er norske forbrukeres viktigste kriterier når de skal gjøre betalinger. I Norge har vi et godt lovverk, som gjør at sikkerheten er godt ivaretatt uansett hvilke av løsningene over man velger.</p>
           <p>En utfordring gjenstår likevel: Dersom man mister kortet må det sperres, og mister man man telefonen uten å ha kode, må den også sperres. Bruker man sin egen mobil til betaling, kan man imidlertid stole på at kortdata og transaksjoner følger strenge krav.</p>
           <h2>Konklusjon: </h2>
-          <p>SMSpay har en rekke fordeler</p>
+          <p><a href="http://smspay.io">SMSpay</a> har en rekke fordeler:</p>
           <ul>
             <li>1/3 av prisen til CPA GAS (tradisjonell SMS-betaling)</li><li>Fungerer på alle typer telefoner uten nedlastning</li>
             <li>Bedriftsabonnement er null problem</li>
@@ -53,7 +53,7 @@
           
           <h2>SMSpay mobil betaling: Donasjon (video)</h2>
           <br>
-          <iframe src="//player.vimeo.com/video/79108480" width="500" height="312" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
+          <iframe src="//player.vimeo.com/video/79108480" width="100%" height="380" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
           <br>
           <h2>Bestill i dag</h2>
           <p>Ønsker du mer info? <a href="http://smspay.io">Se priser og bestill i dag!</a></p>
